--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <h2 style="color:blue;">微弱的路灯下，你紧紧拥着双膝，</h2></b>
-<h2 style="color:blue;">洁白的连衣裙多了点点墨花，</h2></b>
-<h2 style="color:blue;">雨搭着你的泪，</h2></b>
-<h2 style="color:blue;">滑落你的脸庞，</h2></b>
-<h2 style="color:blue;">冷到发白的嘴唇，</h2></b>
-<h2 style="color:blue;">也被你咬得一丝猩红，</h2></b>
-<h2 style="color:blue;">丝毫不在意我牵你的手，</h2></b>
-<h2 style="color:blue;">你说，</h2></b>
-<h2 style="color:blue;">想家，</h2></b>
-<h2 style="color:blue;">好啊，</h2></b>
-<h2 style="color:blue;">我带你回家!</h2></b>
+<h2 style="color:8bef1e;">洁白的连衣裙多了点点墨花，</h2></b>
+<h2 style="color:#11bbd6;">雨搭着你的泪，</h2></b>
+<h2 style="color:#da8ad0;">滑落你的脸庞，</h2></b>
+<h2 style="color:#b50cec;">冷到发白的嘴唇，</h2></b>
+<h2 style="color:#d61249;">也被你咬得一丝猩红，</h2></b>
+<h2 style="color:#0000ff5c;">丝毫不在意我牵你的手，</h2></b>
+<h2 style="color:#ffb0008c;">你说，</h2></b>
+<h2 style="color:#d700ff7d;">想家，</h2></b>
+<h2 style="color:#cc00ff99;">好啊，</h2></b>
+<h2 style="color:#0072ffab;">我带你回家!</h2></b>
